fix: css overflow

--- a/noteblog/Shared/Common.css
+++ b/noteblog/Shared/Common.css
@@ -1,4 +1,12 @@
 ﻿body {
+    width: 100%;
+    max-width: 1600px;
+    overflow-wrap: anywhere;
+}
+
+body, h1, h2, h3, h4, h5, h6 {
+    font-family: "Raleway", sans-serif;
+    line-height: normal;
 }
 
 nav {
